--- a/gulp/source/main.css
+++ b/gulp/source/main.css
@@ -1,5 +1,50 @@
-@lost gutter 40px;
+html {
+    padding: 30px;
+    height: auto;
+}
 
-.div {
-  lost-column: 1/3;
+[class*="__grid"] {
+    max-width: 1140px;
+    margin: 30px auto;
+    color: #ddddce;
+}
+
+.u-clearfix::before {
+    content: '';
+    display: table;
+}
+
+.u-clearfix::after {
+    content: '';
+    display: table;
+    clear: both;
+}
+
+[class*="__grid"] div {
+    height: 100px;
+    line-height: 100px;
+    text-align: center;
+    margin-top: 15px;
+    margin-bottom: 15px;
+}
+
+.ColumnSection__grid {
+    background: #42cafd;
+}
+
+.ColumnSection__grid div {
+    background: #3599c3;
+    lost-column: 1/1;
+}
+
+@media (min-width: 400px) {
+    .ColumnSection__grid div {
+        lost-column: 1/3;
+    }
+}
+
+@media (min-width: 900px) {
+    .ColumnSection__grid div {
+        lost-column: 1/6;
+    }
 }
